external-crates/move/crates/move-compiler/tests/move_2024/parser/global_access_value_invalid.move
module 0x42::M {
    fun foo(): u64 {
        1 + ::global_value
    }
}
